# castepxbin

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  README.md  castep_bin_reader.py  genindex.html  index.html  installation.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test_reader.py  usage.html
.github/workflows/: docs.yml  python-package.yml  python-publish.yml
_sources/: installation.md
_sources/apidocs/castepxbin/: castepxbin.md  castepxbin.pdos.md
apidocs/: index.html
apidocs/castepxbin/: castepxbin.castep_bin.html  castepxbin.html  castepxbin.ome_bin.html  castepxbin.pdos.html  castepxbin.wave.html
castepbin/: test_reader.py
castepbin/test_data/: Si2.bands  Si2.pdos_bin
castepxbin/: __init__.py  castep_bin.py  ome_bin.py  pdos.py  test_reader.py  wave.py
castepxbin/test_data/: Si2-out.cell  Si2.cell  Si2.ome_bin
docs/: .gitignore  conf.py  usage.md
doctrees/: environment.pickle  index.doctree  installation.doctree  usage.doctree
doctrees/apidocs/: index.doctree
doctrees/apidocs/castepxbin/: castepxbin.castep_bin.doctree  castepxbin.doctree  castepxbin.ome_bin.doctree  castepxbin.pdos.doctree  castepxbin.wave.doctree
html/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
html/_sources/: index.md
html/_sources/apidocs/: index.rst
html/apidocs/: index.html
html/apidocs/castepxbin/: castepxbin.html  (+2 more)
test_data/: Si2.bands  Si2.pdos_bin
tests/: test_reader.py
tests/test_data/: Si2-out.cell  Si2.bands  Si2.cst_ome  Si2.dome_bin  SiO2.castep_bin
(+4 files in other folders)
