[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "castepxbin"
authors = [{name = "Bonan Zhu", email = "zhubonan@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
    ]
dynamic = ["version", "description"]
requires-python = ">=3.7"

dependencies = ["numpy>=1,<2", "scipy>=1,<2"]

[project.urls]
"Homepage" = "https://github.com/zhubonan/castepxbin"
"Documentation" = "https://zhubonan.github.io/castepxbin/"


[project.optional-dependencies]
doc = [
    "sphinx-click>=4,<5", "sphinx-autodoc2>=0.4,<0.5", "sphinx-book-theme>=1,<2", "sphinx-copybutton>=0.3,<0.4",
    "myst-parser[linkify]", "sphinx", "linkify-it-py"
]
test = ["pytest", "pytest-cov", "coverage"]
"pre-commit" = [
                "pre-commit~=2.2",
                "pylint~=2.4.4; python_version>='3.0'",
                "pylint-pytest",
            ]
